--- a/exmple/after/css/styles.css
+++ b/exmple/after/css/styles.css
@@ -22,7 +22,6 @@ body {
 .navbar-brand {
   padding-top: 25px;
 }
-
 .navbar-brand h1 { /* Restaurant name */
   font-family: 'Lora', serif;
   color: #557c3e;
@@ -91,11 +90,11 @@ body {
   background-color: #222;
   border-top: 0;
 }
-.panel-footer div.row{
+.panel-footer div.row {
   margin-bottom: 35px;
 }
 #hours, #address {
-  line-height: 2;*/irtifa3 khot*/
+  line-height: 2;
 }
 #hours > span, #address > span {
   font-size: 1.3em;
@@ -105,17 +104,22 @@ body {
   font-size: .8em;
   line-height: 1.8;
 }
-#testimonials{
+#testimonials {
   font-style: italic;
 }
-#testimonials p:nth-child(2){
+#testimonials p:nth-child(2) {
   margin-top: 25px;
 }
+/* END FOOTER */
+
+
+
 /* HOME PAGE */
 .container .jumbotron {
   box-shadow: 0 0 50px #3F0C1F;
   border: 2px solid #3F0C1F;
 }
+
 #menu-tile, #specials-tile, #map-tile {
   height: 250px;
   width: 100%;
@@ -125,7 +129,7 @@ body {
   overflow: hidden;
 }
 #menu-tile:hover, #specials-tile:hover, #map-tile:hover {
-  box-shadow: 0px 1px 5px 1px #cccccc;
+  box-shadow: 0 1px 5px 1px #cccccc;
 }
 #menu-tile {
   background: url('../images/menu-tile.jpg') no-repeat;
@@ -135,9 +139,9 @@ body {
   background: url('../images/specials-tile.jpg') no-repeat;
   background-position: center;
 }
-#menu-tile span ,#specials-tile span ,#map-tile span {
+#menu-tile span, #specials-tile span, #map-tile span {
   position: absolute;
-    bottom: 0;
+  bottom: 0;
   right: 0;
   width: 100%;
   text-align: center;
@@ -145,9 +149,86 @@ body {
   text-transform: uppercase;
   background-color: #000;
   color: #fff;
-  opacity:.8;
+  opacity: .8;
 }
 /* END HOME PAGE */
+
+/* MENU CATEGORIES PAGE */
+.category-tile { 
+  position: relative;
+  border: 2px solid #3F0C1F;
+  overflow: hidden;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto 15px;
+}
+.category-tile span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: .8;
+}
+.category-tile:hover {
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#menu-categories-title + div {
+  margin-bottom: 50px;
+}
+/* END MENU CATEGORIES PAGE */
+
+/* SINGLE CATEGORY PAGE */
+.menu-item-tile {
+  margin-bottom: 25px;
+}
+.menu-item-tile hr {
+  width: 80%;
+}
+.menu-item-tile .menu-item-price {
+  font-size: 1.1em;
+  text-align: right;
+  margin-top: -15px;
+  margin-right: -15px;
+}
+.menu-item-tile .menu-item-price span {
+  font-size: .6em;
+}
+.menu-item-photo {
+  position: relative;
+  border: 2px solid #3F0C1F; 
+  overflow: hidden;
+  padding: 0;
+  margin-right: -15px;
+  margin-left: auto;
+  margin-bottom: 20px;
+  max-width: 250px;
+}
+.menu-item-photo div {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 80px;
+  background-color: #557c3e;
+  text-align: center;
+}
+.menu-item-description {
+  padding-right: 20px;
+}
+h3.menu-item-title {
+  margin: 0 0 10px;
+}
+.menu-item-details {
+  font-size: .9em;
+  font-style: italic;
+}
+/* END SINGLE CATEGORY PAGE */
+
 
 /********** Large devices only **********/
 @media (min-width: 1200px) {
@@ -173,6 +254,9 @@ body {
     background: url('../images/jumbotron_992.jpg') no-repeat;
     height: 558px;
   }
+  h3{
+    font-size: 20px;
+  }
   /* End Home Page */
 }
 
@@ -184,7 +268,6 @@ body {
     height: 432px;
   }
   /* End Home Page */
-
 }
 
 /********** Extra small devices only **********/
@@ -230,6 +313,7 @@ body {
     text-transform: uppercase;
   }
   /* End Header */
+
   /* Footer */
   .panel-footer section {
     margin-bottom: 30px;
@@ -248,40 +332,23 @@ body {
     margin-top: 30px;
     padding: 0;
   }
-  #menu-tile ,#specials-tile{
+  #menu-tile, #specials-tile {
     width: 360px;
-    margin: 0PX auto 15px;
+    margin: 0 auto 15px;
   }
-  /* MENU CATEGORIES PAGE */
-.category-tile { 
-  position: relative;
-  border: 2px solid #3F0C1F;
-  overflow: hidden;
-  width: 200px;
-  height: 200px;
-  margin: 0 auto 15px;
-}
-.category-tile span {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  text-align: center;
-  font-size: 1.2em;
-  text-transform: uppercase;
-  background-color: #000;
-  color: #fff;
-  opacity: .8;
-}
-.category-tile:hover {
-  box-shadow: 0 1px 5px 1px #cccccc;
+
+  .menu-item-photo {
+    margin-right: auto;
+  }
+  .menu-item-tile .menu-item-price {
+    text-align: center;
+  }
+  .menu-item-description {
+    text-align: center;;
+  }
 }
 
-#menu-categories-title + div {
-  margin-bottom: 50px;
-}
-/* END MENU CATEGORIES PAGE */
-}
+
 /********** Super extra small devices Only :-) (e.g., iPhone 4) **********/
 @media (max-width: 479px) {
   /* Header */
@@ -295,5 +362,14 @@ body {
   #menu-tile, #specials-tile {
     width: 280px;
     margin: 0 auto 15px;
+  }
+
+  .col-xxs-12 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    float: left;
+    width: 100%;
   }
 }
